@@ -258,6 +258,7 @@ GtkWidget*		progressBar;
 
 GList*			pluginList=NULL;
 char*			pluginFolder=NULL;
+plugData*		globalPlugData=NULL;
 
 void scrollToIterInPane(pageStruct* page,GtkTextIter* iter)
 {
@@ -438,10 +439,9 @@ void runCommand(char* commandtorun,void* ptr,bool interm,int flags,int useroot)
 				}
 		}
 
-//thePage=strdup("file:///media/LinuxData/ManPages/index.html");
 	if(flags & TOOL_SHOW_DOC)
 		showDocView(USEFILE,(char*)"");
-//showDocView(USEURI,(char*)"/media/LinuxData/ManPages/index.html");
+
 	free(command);
 	free(asroot);
 }
